--- a/kitty/session.conf
+++ b/kitty/session.conf
@@ -20,10 +20,10 @@ focus
 launch python3 /home/chiya/Documents/scripts/status/status.py
 
 # Mining
-new_tab Mining
+#new_tab Mining
 #enabled_layouts Tall:bias=65
 #launch zsh
-launch zsh
+#launch zsh
 
 # Main window
 new_tab
