--- a/sway/autostart.conf
+++ b/sway/autostart.conf
@@ -6,6 +6,9 @@ exec dunst -config $HOME/.config/dunstrc
 exec ibus-daemon -drxR
 exec fcitx5
 
+# KDE connect
+exec --no-startup-id /usr/lib/kdeconnectd
+
 ###
 ##  Autostart on spesific monitors
 ###
