--- a/sway/config
+++ b/sway/config
@@ -34,7 +34,7 @@ exec swayidle -w \
          timeout 900 'swaymsg "output * dpms off"' resume 'swaymsg "output * dpms on"' \
          before-sleep "swaylock -f -c 000000 --line-color \\$color0 --ring-color \\$color0 --key-hl-color \\$color1"
 
-bindsym $mod+l exec swaylock -f -c "000000" --line-color "$color0" --ring-color "$color0" --key-hl-color "$color1"
+bindsym $mod+Backspace exec swaylock -f -c "000000" --line-color "$color0" --ring-color "$color0" --key-hl-color "$color1"
 
 # tha hardware stuff
 include hardware.conf
@@ -43,8 +43,8 @@ include hardware.conf
 #
 # Basics:
 #
-    # Start a terminal
-    bindsym $mod+Return exec kitty
+  # Start a terminal
+	bindsym $mod+Return exec kitty
 	bindsym $mod+KP_Enter exec kitty
 	bindsym $mod+Ctrl+Return exec kitty --class floatingKitty
 	bindsym $mod+Ctrl+KP_Enter exec kitty --class floatingKitty
@@ -82,15 +82,25 @@ include hardware.conf
 # Moving around:
 #
     bindsym $mod+Left focus left
+    bindsym $mod+h focus left
     bindsym $mod+Down focus down
+    bindsym $mod+j focus down
     bindsym $mod+Up focus up
+    bindsym $mod+k focus up
     bindsym $mod+Right focus right
+    bindsym $mod+l focus right
 
     # Ditto, with arrow keys
-    bindsym $mod+Shift+Left move left
-    bindsym $mod+Shift+Down move down
-    bindsym $mod+Shift+Up move up
-    bindsym $mod+Shift+Right move right
+    bindsym $mod+Shift+Left move left 30px
+    bindsym $mod+Shift+Down move down 30px
+    bindsym $mod+Shift+Up move up 30px
+    bindsym $mod+Shift+Right move right 30px
+
+    # vim like
+    bindsym $mod+Shift+h move left 30px
+    bindsym $mod+Shift+j move down 30px
+    bindsym $mod+Shift+k move up 30px
+    bindsym $mod+Shift+l move right 30px
 
 default_border normal 4
 smart_borders on
@@ -136,12 +146,12 @@ client.urgent           $color3 $color3 $color0 $color3
     # You can "split" the current object of your focus with
     # $mod+b or $mod+v, for horizontal and vertical splits
     # respectively.
-    bindsym $mod+h splith
-    bindsym $mod+v splitv
-	default_orientation auto
+    bindsym $mod+v splith
+    bindsym $mod+c splitv
+    default_orientation auto
 
     # Switch the current container between different layout styles
-    bindsym $mod+s layout stacking
+    bindsym $mod+s sticky toggle
     bindsym $mod+t layout tabbed
     bindsym $mod+e layout toggle split
 
@@ -151,12 +161,9 @@ client.urgent           $color3 $color3 $color0 $color3
     # Toggle the current focus between tiling and floating mode
     bindsym $mod+space floating toggle
 
-    # Swap focus between the tiling area and the floating area
-    bindsym $mod+Shift+space focus mode_toggle
-
     # Move focus to the parent container
     bindsym $mod+a focus parent
-	bindsym $mod+d focus mode_toggle
+	  bindsym $mod+d focus mode_toggle
 #
 # Scratchpad:
 #
@@ -169,6 +176,49 @@ client.urgent           $color3 $color3 $color0 $color3
     # Show the next scratchpad window or hide the focused scratchpad window.
     # If there are multiple scratchpad windows, this command cycles through them.
     bindsym $mod+minus scratchpad show
+
+#
+# Live gaps adjustments
+#
+set $mode_gaps Gaps: (o) outer, (i) inner
+set $mode_gaps_outer Outer Gaps: +|-|0 (local), Shift + +|-|0 (global)
+set $mode_gaps_inner Inner Gaps: +|-|0 (local), Shift + +|-|0 (global)
+bindsym $mod+w mode "$mode_gaps"
+
+mode "$mode_gaps" {
+        bindsym o      mode "$mode_gaps_outer"
+        bindsym i      mode "$mode_gaps_inner"
+        bindsym Return mode "default"
+        bindsym Escape mode "default"
+        bindsym $mod+w mode "default"
+}
+mode "$mode_gaps_inner" {
+        bindsym plus  gaps inner current plus 5
+        bindsym minus gaps inner current minus 5
+        bindsym 0     gaps inner current set 0
+
+        bindsym Shift+plus  gaps inner all plus 5
+        bindsym Shift+minus gaps inner all minus 5
+        bindsym Shift+0     gaps inner all set 0
+
+        bindsym Return mode "$mode_gaps"
+        bindsym Escape mode "$mode_gaps"
+        bindsym $mod+w mode "default"
+}
+mode "$mode_gaps_outer" {
+        bindsym plus  gaps outer current plus 5
+        bindsym minus gaps outer current minus 5
+        bindsym 0     gaps outer current set 0
+
+        bindsym Shift+plus  gaps outer all plus 5
+        bindsym Shift+minus gaps outer all minus 5
+        bindsym Shift+0     gaps outer all set 0
+
+        bindsym Return mode "$mode_gaps"
+        bindsym Escape mode "$mode_gaps"
+        bindsym $mod+w mode "default"
+}
+
 #
 # Resizing containers:
 #
@@ -179,6 +229,12 @@ mode "resize" {
     bindsym Up resize shrink height 10px
     bindsym Right resize grow width 10px
 
+    # vim like
+    bindsym h resize shrink width 10px
+    bindsym j resize grow height 10px
+    bindsym k resize shrink height 10px
+    bindsym l resize grow width 10px
+    
     # Return to default mode
     bindsym Return mode "default"
 	bindsym KP_Enter mode "default"
@@ -198,6 +254,7 @@ bindsym $mod+r mode "resize"
 	bindsym Print exec wl-copy < $(grimshot save area "$HOME/Pictures/Shutter/Screenshot_$(date +%Y-%m-%d_%H:%M:%S).png")
 	bindsym Shift+Print exec grimshot --notify copy area
 	bindsym Ctrl+Print exec grimshot --notify copy output
+	bindsym Ctrl+Shift+Print exec wl-copy < $(grimshot --notify save output "$HOME/Pictures/Shutter/Screenshot_$(date +%Y-%m-%d_%H:%M:%S).png")
 	bindsym $mod+Print exec wl-copy < $(grimshot --notify save screen "$HOME/Pictures/Shutter/Screenshot_$(date +%Y-%m-%d_%H:%M:%S).png")
 	bindsym Mod1+Print exec wl-copy < $(grimshot --notify save active "$HOME/Pictures/Shutter/Screenshot_$(date +%Y-%m-%d_%H:%M:%S).png")
 
@@ -213,10 +270,10 @@ bindsym $mod+r mode "resize"
 	for_window [class="code-oss"]					floating enable
 	for_window [window_role="toolbox"]              floating enable
 	for_window [window_role="pop-up"]				floating enable
-	for_window [instance="Toolkit"]					floating enable
+	for_window [instance="Toolkit"] 				floating enable
 	for_window [app_id="org.kde.dolphin"]           floating enable
 	for_window [app_id="org.gnome.Nautilus"]        floating enable
-	for_window [app_id="com.obsproject.Studio"]		floating enable
+	for_window [app_id="com.obsproject.Studio"] 	floating enable
 	for_window [class="obs"]						floating enable
 	for_window [app_id="subl"]						floating enable
 	for_window [app_id="org.kde.gwenview"]			floating enable
@@ -225,6 +282,7 @@ bindsym $mod+r mode "resize"
 	for_window [app_id="deluge"]					floating enable
 	for_window [app_id="electrum"]					floating enable
 	for_window [app_id="org.getmonero.monero-wallet-gui"] floating enable
+	for_window [class="Week 39"]					floating enable
 
 #
 # Status Bar:
