Monitors now have names, instead of Unknown

--- a/sway/hardware.conf
+++ b/sway/hardware.conf
@@ -24,20 +24,20 @@ input "5426:122:Razer_Razer_Viper_Ultimate" {
 ## Monitors
 
 # Left monitor
-output "Unknown VG27A M1LMQS007922" {
+output "ASUSTek COMPUTER INC VG27A M1LMQS007922" {
         mode 2560x1440@164.999Hz
 		position 0,1050
 #		position 5120,1050
 }
  
 # Middle monitor
-output "Unknown AG271QG #ASM0HnQVlo3d" {
+output "AOC AG271QG #ASM0HnQVlo3d" {
         mode 2560x1440@165Hz
         position 2560,1050
 }
  
 # Right monitor
-output "Unknown ROG PG278QR #ASNuh5ktuQHd" {
+output "ASUSTek COMPUTER INC ROG PG278QR #ASNuh5ktuQHd" {
         mode 2560x1440@165Hz
 		position 5120,1050
 #		position 0,1050
