Added zshrc. It's not bloated anymore

--- a/sway/hardware.conf
+++ b/sway/hardware.conf
@@ -1,4 +1,4 @@
-## Input devices
+
 
 # Keyboard
 input * {
@@ -20,6 +20,9 @@ input "5426:122:Razer_Razer_Viper_Ultimate" {
     accel_profile "flat"
     pointer_accel -0.1 # set mouse sensitivity (between -1 and 1)
 }
+
+# Wacom tablet
+input "1386:830:Wacom_Intuos_PT_M_2_Pen" map_to_output "AOC AG271QG #ASM0HnQVlo3d"
 
 ## Monitors
 
