--- a/sway/config
+++ b/sway/config
@@ -48,7 +48,7 @@ include hardware.conf
 	bindsym $mod+KP_Enter exec kitty
 	bindsym $mod+Ctrl+Return exec kitty --class floatingKitty
 	bindsym $mod+Ctrl+KP_Enter exec kitty --class floatingKitty
-	for_window [app_id="floatingKitty"] floating enable
+	for_window [app_id="floatingKitty"] floating enable, resize set 1300 px 900 px
 
     # Kill focused window
     bindsym $mod+Escape kill
@@ -163,7 +163,7 @@ client.urgent           $color3 $color3 $color0 $color3
 
     # Move focus to the parent container
     bindsym $mod+a focus parent
-	  bindsym $mod+d focus mode_toggle
+	bindsym $mod+d focus mode_toggle
 #
 # Scratchpad:
 #
@@ -285,6 +285,9 @@ bindsym $mod+r mode "resize"
 	for_window [app_id="transmission-gtk"]			floating enable
 	for_window [class="Week 39"]					floating enable
 	for_window [app_id="zoom"]						floating enable
+	for_window [app_id="Waydroid"]					floating enable
+	for_window [class="Microsoft-edge-dev"]			floating enable, resize set 1200 px 1300 px
+	for_window [app_id="anki"]						floating enable, resize set 1400 px 1000 px
 
 #
 # Status Bar:
