--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -368,11 +368,11 @@ tab_fade 1 1 1
 #: The separator between tabs in the tab bar when using separator as
 #: the tab_bar_style.
 
-active_tab_foreground   #ffffff
-active_tab_background   #282828
-active_tab_font_style   bold
-inactive_tab_foreground #cccccc
-inactive_tab_background #282828
+active_tab_foreground   #222d3a
+active_tab_background   #f5b6ac
+active_tab_font_style   normal
+inactive_tab_foreground #f5b6ac
+inactive_tab_background #536988
 inactive_tab_font_style normal
 
 #: Tab bar colors and styles
