--- a/sway/hardware.conf
+++ b/sway/hardware.conf
@@ -26,28 +26,31 @@ input "1386:830:Wacom_Intuos_PT_M_2_Pen" map_to_output "AOC AG271QG #ASM0HnQVlo3
 
 ## Monitors
 
-# Left monitor
+# Right monitor
 output "ASUSTek COMPUTER INC VG27A M1LMQS007922" {
         mode 2560x1440@164.999Hz
-		position 0,1050
+#		position 0,1050
 #		position 5120,1050
+		position 5120,0
 }
  
 # Middle monitor
 output "AOC AG271QG #ASM0HnQVlo3d" {
         mode 2560x1440@165Hz
-        position 2560,1050
+#        position 2560,1050
+		position 2560,0
 }
  
-# Right monitor
+# Left monitor
 output "ASUSTek COMPUTER INC ROG PG278QR #ASNuh5ktuQHd" {
         mode 2560x1440@165Hz
-		position 5120,1050
+#		position 5120,1050
 #		position 0,1050
+		position 0,0
 }
  
 # Top monitor
-output "Samsung Electric Company S22C450 H4MCB01623" {
-        mode 1680x1050@59.954Hz
-        position 3000,0
-}
+#output "Samsung Electric Company S22C450 H4MCB01623" {
+#        mode 1680x1050@59.954Hz
+#        position 3000,0
+#}
