--- a/i3blocks/i3blocks.conf
+++ b/i3blocks/i3blocks.conf
@@ -16,12 +16,12 @@ border_left=0
 border_right=0
 border_bottom=0
 color=#F2dadd
+markup=pango
 
 [mediaplayer]
 instance=spotify
 interval=5
 signal=10
-align=center
 
 #[covid]
 #label=
@@ -40,18 +40,18 @@ align=center
 
 [cpu_usage]
 interval=3
-LABEL= 
-#min_width=X 3200%
+LABEL=  
+min_width=X 200%
 T_WARN=50
 T_CRIT=80
 DECIMALS=0
 #COLOR_NORMAL=#EBDBB2
 #COLOR_WARN=#FFFC00
 #COLOR_CRIT=#FF0000
-align=right
+align=left
 
 [memory]
-label= 
+LABEL= 
 interval=30
 
 [volume-pulseaudio]
@@ -65,6 +65,8 @@ signal=1
 
 [date]
 interval=1
+min_width=XXXX-XX-XX X  XX:XX:XX
+align=center
 
 
 #[ibus]
