--- a/sway/config
+++ b/sway/config
@@ -258,7 +258,7 @@ bar {
 
 	# When the status_command prints a new line to stdout, swaybar updates.
 	# The default just shows the current date and time.
-	font pango: Cousine Nerd Font, Font Awesome 6 Pro Solid, Noto Sans 12
+	font pango: Noto Sans CJK JP, Cousine Nerd Font, Font Awesome 6 Pro Solid, Noto Sans 12
 	icon_theme Papirus-Dark
 
 	#status_command while date +'%Y-%m-%d %H:%M:%S'; do sleep 1; done
