Fixed issue where mediaplayer would fail to render if an & symbol was present

--- a/i3blocks/i3blocks.conf
+++ b/i3blocks/i3blocks.conf
@@ -56,8 +56,10 @@ interval=30
 
 [volume-pulseaudio]
 SHORT_FORMAT="${SYMB}${VOL}%"
+min_width=X muted  
 interval=once
 signal=1
+align=center
 
 #[ssid]
 #interval=60
