Now able to switch audio device clicking on volume icon

--- a/i3blocks/i3blocks.conf
+++ b/i3blocks/i3blocks.conf
@@ -23,6 +23,11 @@ instance=spotify
 interval=5
 signal=10
 
+[mediaplayer]
+instance=elisa
+interval=5
+signal=10
+
 #[covid]
 #label=
 #interval=600
@@ -37,6 +42,10 @@ signal=10
 #[disk]
 #label= 
 #interval=60
+
+#[ssid]
+#interval=60
+#signal=4
 
 [cpu_usage]
 interval=3
