Minor tweaks here and there

--- a/kitty/session.conf
+++ b/kitty/session.conf
@@ -17,7 +17,7 @@ launch radeontop
 # Status script
 new_tab status Monitor
 focus
-launch python3 /home/chiya/Documents/scripts/status/status.py
+launch /home/chiya/PycharmProjects/status/venv/bin/python3 /home/chiya/PycharmProjects/status/main.py
 
 # Mining
 #new_tab Mining
