--- a/kitty/theme.conf
+++ b/kitty/theme.conf
@@ -2,7 +2,7 @@
 background #222d3a
 foreground #c4c4b5
 cursor #f6f6ec
-selection_background #343434
+selection_background #f5b6ac
 color0 #191919
 color8 #615e4b
 color1 #ff060c
