--- a/i3blocks/i3blocks.conf
+++ b/i3blocks/i3blocks.conf
@@ -9,13 +9,11 @@
 # Global properties
 separator=false
 separator_block_width=30
-# Source the color theme
 command=~/.config/i3blocks/$BLOCK_NAME
 border_top=0
 border_left=0
 border_right=0
 border_bottom=0
-color=#F2dadd
 markup=pango
 
 [mediaplayer]
@@ -23,14 +21,21 @@ instance=spotify
 interval=5
 signal=10
 
-[mediaplayer]
-instance=elisa
-interval=5
-signal=10
+[status_script]
+interval=10
 
-#[covid]
-#label=
-#interval=600
+[cpu_usage]
+interval=3
+LABEL=
+min_width=X 2000%
+T_WARN=50
+T_CRIT=80
+DECIMALS=0
+align=left
+
+[memory]
+LABEL=
+interval=30
 
 #[wanikani]
 #label= 
@@ -40,50 +45,35 @@ signal=10
 #interval=600
 
 #[disk]
-#label= 
+#LABEL= 
 #interval=60
 
-#[ssid]
-#interval=60
-#signal=4
+[battery]
+instance=0
+interval=5
 
-[status_script]
-interval=10
-
-[cpu_usage]
-interval=3
-LABEL=  
-min_width=X 2000%
-T_WARN=50
-T_CRIT=80
-DECIMALS=0
-#COLOR_NORMAL=#EBDBB2
-#COLOR_WARN=#FFFC00
-#COLOR_CRIT=#FF0000
-align=left
-
-[memory]
-LABEL= 
-interval=30
+#[brightness]
+#label= 
+#interval=once
+#signal=2
 
 [volume-pulseaudio]
+LONG_FORMAT="${SYMB}${VOL}%"
 SHORT_FORMAT="${SYMB}${VOL}%"
-min_width=X muted  
+min_width=X muted
 interval=once
 signal=1
 align=center
 
-#[ssid]
-#interval=60
-#signal=4
+[ssid]
+interval=60
+signal=4
 
 [date]
 interval=1
-min_width=XXXX-XX-XX X  XX:XX:XX
-align=center
 
 
-#[ibus]
-#label=
-#interval=once
-#signal=3
+[ibus]
+LABEL=
+interval=once
+signal=3
