Updates to sway

--- a/sway/autostart.conf
+++ b/sway/autostart.conf
@@ -2,15 +2,6 @@
 # Dunst
 exec dunst -config $HOME/.config/dunstrc
 
-# Fcitx5
+# Mozc
 exec ibus-daemon -drxR
 exec fcitx5
-
-# KDE connect
-exec --no-startup-id /usr/lib/kdeconnectd
-
-###
-##  Autostart on spesific monitors
-###
-
-exec bash $HOME/.config/sway/autostart.sh
