--- a/sway/hardware.conf
+++ b/sway/hardware.conf
@@ -1,12 +1,12 @@
-
+## Input devices
 
 # Keyboard
 input * {
     xkb_layout "no"
-	xkb_numlock enabled
-    xkb_options "grp:win_space_toggle"
+    xkb_numlock enabled
+    xkb_options "grp:win_space_toggle,caps:swapescape"
     repeat_delay 200
-    repeat_rate 50
+    repeat_rate 35
 }
 
 # Mouse
@@ -20,42 +20,18 @@ input "5426:122:Razer_Razer_Viper_Ultimate" {
     accel_profile "flat"
     pointer_accel -0.1 # set mouse sensitivity (between -1 and 1)
 }
-
-# Wacom tablet
-input "1386:830:Wacom_Intuos_PT_M_2_Pen" map_to_output "AOC AG271QG #ASM0HnQVlo3d"
+input "1267:12736:ASUE120B:00_04F3:31C0_Touchpad" {
+    dwt enabled
+    tap enabled
+    natural_scroll enabled
+    middle_emulation false
+	scroll_factor 0.3
+}
 
 ## Monitors
 
-# Right monitor
-output "ASUSTek COMPUTER INC VG27A M1LMQS007922" {
-        mode 2560x1440@164.999Hz
-#		adaptive_sync on
-#		position 0,1050
-		position 5120,1440
-#		position 5120,0
-}
- 
-# Middle monitor
-output "AOC AG271QG #ASM0HnQVlo3d" {
-        mode 2560x1440@165Hz
-#		adaptive_sync on
-        position 2560,1440
-#		position 2560,0
-}
- 
-# Left monitor
-output "ASUSTek COMPUTER INC ROG PG278QR #ASNuh5ktuQHd" {
-        mode 2560x1440@165Hz
-#		adaptive_sync on
-#		position 5120,1050
-		position 0,1440
-#		position 0,0
-}
- 
-# Top monitor
-output "Samsung Electric Company LC34G55T HNTW502306" {
-        mode 3440x1440@164.999Hz
-		#mode 1720x1440@164.965Hz
-#		adaptive_sync on
-        position 2120,0
+# Main monitor
+output "SDC 0x4171 Unknown" {
+        mode 2880x1800@90.001Hz
+        position 0,0
 }
