no -> US altgr-intl

--- a/sway/hardware.conf
+++ b/sway/hardware.conf
@@ -2,7 +2,8 @@
 
 # Keyboard
 input * {
-    xkb_layout "no"
+    xkb_layout "us"
+    xkb_variant "altgr-intl"
     xkb_numlock enabled
     xkb_options "grp:win_space_toggle,caps:swapescape"
     repeat_delay 200
@@ -31,7 +32,13 @@ input "1267:12736:ASUE120B:00_04F3:31C0_Touchpad" {
 ## Monitors
 
 # Main monitor
-output "SDC 0x4171 Unknown" {
-        mode 2880x1800@90.001Hz
-        position 0,0
-}
+#output "eDP-1" {
+#        mode 2880x1800@90.001Hz
+#        position 1000,1440
+#}
+
+# Top monitor
+#output "Samsung Electric Company LC34G55T HNTW502306" {
+#        mode 3440x1440@99.982Hz
+#        position 0,0
+#}
