--- a/sway/hardware.conf
+++ b/sway/hardware.conf
@@ -31,11 +31,32 @@ input "1267:12736:ASUE120B:00_04F3:31C0_Touchpad" {
 
 ## Monitors
 
+set $main-display "eDP-1"
+set $asus-display "ASUSTek COMPUTER INC VG27A M1LMQS007922"
+set $aoc-display "AOC AG271QG #ASM0HnQVlo3d"
+set $wacom-display "Wacom Tech Cintiq 16 1DQ00X1001869"
+set $wacom-display-touch "1386:942:Wacom_Cintiq_16_Pen"
+
 # Main monitor
-#output "eDP-1" {
-#        mode 2880x1800@90.001Hz
-#        position 1000,1440
+output $main-display {
+        mode 2880x1800@90.001Hz
+        position 0,540
+}
+
+output $asus-display {
+		mode 2560x1440@119.998Hz
+		position 1440,0
+}
+output $aoc-display {
+        mode 2560x1440@165.000Hz
+        position 4000,0
+}
+
+#output $wacom-display {
+#        mode 1920x1080@60.000Hz
+#        position 2880,1660
 #}
+#input $wacom-display-touch map_to_output $wacom-display
 
 # Top monitor
 #output "Samsung Electric Company LC34G55T HNTW502306" {
